Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-132115

QDateTimeParser::parse assertion triggered in case of invalid date

XMLWordPrintable

    • All
    • 5
    • 72519aeb2 (dev), e2a0ef30d (6.9), 8a63c9b43 (6.8), 329c83457 (tqtc/lts-6.5)

      Calling QDate::fromString("290215", "ddMMyy") triggers an assertion in QDateTimeParser::parse.

      Expected behavior: The `QDate` instance with a null date, but no assertion is triggered.

      Assertion was introduced in a49ccc0

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Eddy Edward Welbourne
            EliteScience Heiko Thiel
            Vladimir Minenko Vladimir Minenko
            Alex Blasche Alex Blasche
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes